Edit item view fixed on mobile

--- a/frontend/src/components/EditItemView/EditItemView.css
+++ b/frontend/src/components/EditItemView/EditItemView.css
@@ -11,6 +11,7 @@
 
 #descriptor{
   padding-bottom: 25px;
+  padding-left: 10px;
 }
 
 .tooltip {
